<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>taster_path_planning_package</name>
  <version>0.0.0</version>
  <description>This package is responsible for planning the trajectory for the vehicle through the track. 
  It uses data from the Perception package, which includes coordinates of differently coloured cones discovered on the track, 
  and calculates a reliable path within the boundaries.</description>
  <maintainer email="FormulaStudent@napier.ac.uk">FormulaStudentTeamNapier</maintainer>
  <license>TODO: License declaration</license>

<exec_depend>rclpy</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>fstn_messages_package</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>datetime</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
